--- a/Coursera_Case_Study.Rmd
+++ b/Coursera_Case_Study.Rmd
@@ -7,7 +7,9 @@ output:
   pdf_document: default
 ---
 #Introduction
-##Welcome to the Cyclistic bike-share analysis case study! In this case study, you work for a fictional company, Cyclistic, along with some key team members. In order to answer the business questions, follow the steps of the data analysis process: Ask, Prepare, Process, Analyze, Share, and Act. Along the way, the Case Study Roadmap tables including guiding questions and key tasks — will help you stay on the right path.
+##Welcome to the Cyclistic bike-share analysis case study! In this case study, you work for a fictional company, Cyclistic, along with some key team members. 
+In order to answer the business questions, follow the steps of the data analysis process: Ask, Prepare, Process, Analyze, Share, and Act. Along the way, the Case 
+Study Roadmap tables including guiding questions and key tasks — will help you stay on the right path.
 
 1. How do annual members and casual riders use Cyclistic bikes differently?
 2. Why would casual riders buy Cyclistic annual memberships?
